Major changes between version 0.98.3 and 0.98.4.
------------------------------------------------
  - Unified all the functions that invoked external programs via
    a shell into one glorious function. Now the output from
    everything is logged - including ip-up/ip-down - and all
    scripts have the same environment variables set for them.
    Since we log the output we no longer log the exit status
    of external scripts.
  - Made local and remote addresses optional. If you are using a
    named interface as proxy (or have no proxy at all) you may
    not care about the addresses.
  - Added a proxy option which may be used to specify a particular
    interface to snoop as a proxy. One possible use for this would
    be to set up an ISDN interface "by the book", leave it in
    manual dial mode, and run diald with proxy isdn0 and device isdn0
    using the connect/disconnect scripts to trigger dialling and
    hangup. Then the kernel bloat used to do half the job diald
    can do would be redundant. (I haven't tried this yet. I don't
    have ISDN at home. Sponsorship is welcome :-) )
  - Ethertap/SLIP proxy is no longer a compile time option. Diald
    will search first for a usable ethertap interface and then
    fall back on using a pseudo terminalled SLIP interface if
    necessary. If all the SLIP interfaces are in use diald will
    come up with no proxy and you will have to "up" it manually.
  - If the lock option is specified we create a device lock
    for incoming devices if one does not already exist. This is
    because newer versions of the kernel ISDN code appear to bounce
    an existing connection if we attempt to dial an in-use ipppd
    device whereas previously it returned an error.
  - Use -defaultroute rather than nodefaultroute since pppd 2.2
    does not understand nodefaultroute.
  - Fix for compilation on Linux 2.0.x.


Major changes between version 0.98.2 and 0.98.3.
------------------------------------------------