@@ -207,6 +207,7 @@ char *local_ip;
 unsigned long local_addr;
 char *remote_ip;
 char *netmask;
+char *ifsetup;
 char *addroute;
 char *delroute;
 char *ip_up;
@@ -407,8 +408,8 @@ void parse_up(void *var, char **argv);
 void parse_down(void *var, char **argv);
 void parse_prule(void *var, char **argv);
 void parse_var(void *var, char **argv);
-void iface_start(char *, int, char *, char *);
-void iface_stop(char *, int, char *, char *);
+void iface_start(char *, char *, int, char *, char *);
+void iface_stop(char *, char *, int, char *, char *);
 void close_modem(void);
 int open_modem (void);
 void reopen_modem (void);
