@@ -106,7 +106,7 @@ proxy_dev_start(proxy_t *proxy)
 	return;
     }
 
-    iface_start(proxy->iftype, proxy->ifunit,
+    iface_start("proxy", proxy->iftype, proxy->ifunit,
 	orig_local_ip, orig_remote_ip);
 }
 
@@ -122,7 +122,7 @@ proxy_dev_stop(proxy_t *proxy)
 	return;
     }
 
-    iface_stop(proxy->iftype, proxy->ifunit,
+    iface_stop("proxy", proxy->iftype, proxy->ifunit,
 	orig_local_ip, orig_remote_ip);
 }
 
